<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_auth"
    app:startDestination="@id/welcomeFragment">

    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.fittrackpro.app.ui.auth.WelcomeFragment"
        android:label="@string/app_name">

        <action
            android:id="@+id/action_welcome_to_login"
            app:destination="@id/loginFragment" />

        <action
            android:id="@+id/action_welcome_to_register"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.fittrackpro.app.ui.auth.LoginFragment"
        android:label="@string/login">

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.fittrackpro.app.ui.auth.RegisterFragment"
        android:label="@string/register" />

</navigation>